<resources>
    <string name="app_name">ElectronicStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="about_us">About Us</string>
    <string name="about_information">Informations</string>
    <string name="msi_katana">MSI KATANA</string>
    <string name="_12_000tl">12.000tl</string>
    <string name="description">Description</string>
    <string name="price">Price:</string>
    <string name="textview">TextView</string>
    <string name="mouse">Mouse</string>
    <string name="headphone">Headphone</string>
    <string name="television">Television</string>
    <string name="laptop">Laptop</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="smartwatch">Smartwatch</string>
    <string name="str1">Since the day our first shop was opened, we have provided the best service to our customers with our successful employees. Thank you for the interest of all technology lovers.</string>
    <string name="open_hours_8am_22pm">Open hours: 8am - 22pm</string>
    <string name="phone_number_0_232_555_55_55">Phone number: 0(232) 555 55 55</string>
    <string name="state_province_area_izmir">State/province/area: Izmir</string>
    <string name="district_konak">District: Konak</string>
    <string name="street_kemeralt">Street: Kemeraltı</string>
    <string name="contact_with_us">Contact with us:</string>
    <string name="send">send</string>

</resources>