<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailstxt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationFragment">




    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/infoImage"
                android:layout_width="301dp"
                android:layout_height="285dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.058" />

            <TextView
                android:id="@+id/infoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="30dp"
                android:text="@string/msi_katana"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoImage" />

            <TextView
                android:id="@+id/infoPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:text="@string/_12_000tl"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/txttprice"
                app:layout_constraintTop_toBottomOf="@+id/infoName" />

            <TextView
                android:id="@+id/txtdet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="34dp"
                android:text="@string/description"
                android:textColor="@color/green"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoPrice" />

            <TextView
                android:id="@+id/txttprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="14dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoName" />

            <TextView
                android:id="@+id/infoDetails"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="10dp"
                android:text="@string/textview"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdet" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:clickable="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:src="?attr/actionModeShareDrawable" />
</FrameLayout>